<resources>
    <string name="app_name">Tia Anica</string>
    <string name="title_activity_alpha_sum">Alpha Sum</string>
    <string name="title_activity_vigenere_cipher">Vigenère Cipher</string>
    <string name="title_activity_coord_calculator">Coordinate Formula Calculator</string>
    <string name="title_activity_coordinate_offset">Coordinate Offset</string>
    <string name="alphasum">Alpha Sum Calculator</string>
    <string name="vigenere">Vigenère Cipher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint">Enter your text</string>
    <string name="key_hint">Enter your key</string>
    <string name="Encode">Encode</string>
    <string name="Decode">Decode</string>
    <string name="latitude_hint"><font size="15">Enter the initial latitude</font></string>
    <string name="longitude_hint"><font size="15">Enter the initial longitude</font></string>
    <string name="initial_coordinate_hint"><font size = "15">Enter the initial coordinates</font></string>
    <string name="angle_hint"><font size="15">Enter the angle in degrees</font></string>
    <string name="distance_hint"><font size="15">Enter the distance in metres</font></string>
    <string name="coord_formula_hint"><font size="15">Enter the coordinate formula</font></string>

    <string name="enter">Enter</string>
    <string name="help">Help</string>
    <string name="ok">Got it!</string>
    <string name="home">Home</string>
    <string name="alphasum_info">&lt;b>&lt;i>Alpha Sum: &lt;/i>&lt;/b>Calculates the sum of the letters in a word, when these are converted to letter, e.g. A = 1, B = 2, C = 3 ...</string>
    <string name="vigenere_info">&lt;b>&lt;i>Vigenère Cipher: &lt;/i>&lt;/b>Encodes and Decodes a message using the Vignère Cipher.</string>
    <string name="coord_calculator_info">&lt;b>&lt;i>Coordinate Formula Calculator: &lt;/i>&lt;/b>Takes a formula for the coordinates of a geocache (such as N48º 34.A(B + C)D E 10º 52.(D * 2)FG or B*2 + 10) this replaces the letter with the appropriate values and computes the final coordinates.</string>
    <string name="coord_offset_info">&lt;b>&lt;i>Coordinate Offset: &lt;/i>&lt;/b>Calculates the coordinates you end up with if you move in a certain angle (in degrees) and a certain distance (in metres) from some initial coordinates.</string>
    <string name="nav_header_title">Tia Anica</string>
    <string name="nav_header_subtitle">https://github.com/MargaridaMC/Tia-Anica</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="initial_coordinates">Initial\nCoordinates:</string>
    <string name="angle_in_degrees">Angle\n(in degrees):</string>
    <string name="distance_in_m">Distance\n(in m):</string>
    <string name="compute">Compute</string>
    <string name="gps_network_not_enabled">You need to have GPS signal enabled in order to use this feature.</string>
    <string name="open_location_settings">Go to Settings.</string>
    <string name="Cancel">Cancel</string>
    <string name="coordinates_format">geo:0,0?q=%f,0%f</string>
</resources>
