<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mg.tiaanica.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <!--android:background="@drawable/portrait_background"-->
    <include layout="@layout/portrait_background"/>

    <Button
        android:id="@+id/AlphaSumButton"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:onClick="goToAlphaSum"
        android:text="@string/alphasum"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintBottom_toTopOf="@+id/CoordinateCalculatorButton"
        app:layout_constraintEnd_toStartOf="@+id/VigenereCipherButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/VigenereCipherButton"
        style="@style/AppTheme.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:onClick="goToVigenereCipher"
        android:text="@string/vigenere"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintBottom_toBottomOf="@+id/AlphaSumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AlphaSumButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/CoordinateCalculatorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:onClick="goToCoordCalculator"
        android:text="@string/title_activity_coord_calculator"
        android:textAlignment="center"
        style="@style/AppTheme.Button"
        app:layout_constraintEnd_toStartOf="@+id/CoordinateOffsetButton"
        app:layout_constraintStart_toStartOf="@+id/AlphaSumButton"
        app:layout_constraintTop_toBottomOf="@+id/AlphaSumButton" />

    <Button
        android:id="@+id/CoordinateOffsetButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:onClick="goToCoordOffset"
        android:text="@string/title_activity_coordinate_offset"
        style="@style/AppTheme.Button"
        app:layout_constraintBottom_toBottomOf="@+id/CoordinateCalculatorButton"
        app:layout_constraintEnd_toEndOf="@+id/VigenereCipherButton"
        app:layout_constraintStart_toStartOf="@+id/VigenereCipherButton"
        app:layout_constraintTop_toTopOf="@+id/CoordinateCalculatorButton" />

</android.support.constraint.ConstraintLayout>
